--- a/debian.riscv/changelog
+++ b/debian.riscv/changelog
@@ -1,3 +1,10 @@
+linux-riscv-unstable (5.16.0-1001.1~ppa5) jammy; urgency=medium
+
+  * Fix build with binutils 2.38 from Aurelien Jarno <aurelien@aurel32.net>
+  * Fix build failure caused by checks.
+
+ -- Alexandre Ghiti <alexandre.ghiti@canonical.com>  Thu, 27 Jan 2022 13:37:41 +0100
+
 linux-riscv-unstable (5.16.0-1001.1~ppa4) jammy; urgency=medium
 
   * Fix build failure caused by checks.
